# FlexKV

./: .gitignore  Cargo.toml  README.md  config_sample
flexkv/: Cargo.toml
flexkv-rocks/flexkv-rocksdb/: Cargo.toml  build.sh  launch-cluster.sh  launch-cluster_back.sh  terminate-cluster.sh  test-cluster.sh  test-small.sh
flexkv-rocks/flexkv-rocksdb/cpp/: CMakeLists.txt
flexkv-rocks/flexkv-rocksdb/cpp/cmake/: kv739_cpp-config.cmake.in
flexkv-rocks/flexkv-rocksdb/cpp/example/: main.cpp  main_back.cpp
flexkv-rocks/flexkv-rocksdb/cpp/include/: kv739_client.hpp  kv739_client_back.hpp
flexkv-rocks/flexkv-rocksdb/src/: app.rs  client.rs  ffi.rs  lib.rs  store.rs
flexkv-rocks/flexkv-rocksdb/src/network/: api.rs  management.rs  raft.rs  raft_network_impl.rs
flexkv-rocks/flexkv-rocksdb/tests/cluster/: test_cluster.rs  test_cluster_debug.rs
flexkv/src/: async_runtime.rs  change_members.rs  defensive.rs  display_ext.rs  error.rs  instant.rs  lib.rs  log_id_range.rs  node.rs  raft_types.rs  storage_error.rs  summary.rs  type_config.rs  utime.rs
flexkv/src/config/: config.rs  error.rs  mod.rs
flexkv/src/core/: balancer.rs  command_state.rs  mod.rs  notify.rs  raft_core.rs  replication_state.rs  server_state.rs  tick.rs
flexkv/src/core/raft_msg/: external_command.rs  mod.rs
flexkv/src/core/state_machine/: command.rs  handle.rs  mod.rs  response.rs  worker.rs
flexkv/src/display_ext/: display_instant.rs  display_option.rs  display_slice.rs
flexkv/src/engine/: command.rs  command_kind.rs  engine_config.rs  engine_impl.rs  engine_output.rs  log_id_list.rs  mod.rs  time_state.rs
flexkv/src/engine/operator/: mod.rs
flexkv/src/engine/operator/establish_operator/: mod.rs
flexkv/src/engine/operator/following_operator/: mod.rs
flexkv/src/engine/operator/leader_operator/: mod.rs
flexkv/src/engine/operator/log_operator/: mod.rs
flexkv/src/engine/operator/replication_operator/: mod.rs
flexkv/src/engine/operator/server_state_operator/: mod.rs
flexkv/src/engine/operator/snapshot_operator/: mod.rs
flexkv/src/engine/operator/vote_operator/: mod.rs
flexkv/src/entry/: mod.rs  payload.rs  traits.rs
flexkv/src/error/: decompose.rs  into_ok.rs  replication_closed.rs  streaming_error.rs
flexkv/src/impls/: mod.rs
flexkv/src/log_id/: log_id_option_ext.rs  log_index_option_ext.rs  mod.rs  raft_log_id.rs
flexkv/src/macros/: Cargo.toml
flexkv/src/macros/src/: expand.rs  lib.rs  since.rs  utils.rs
flexkv/src/membership/: effective_membership.rs  into_nodes.rs  membership.rs  mod.rs  stored_membership.rs
flexkv/src/metrics/: metric.rs  metric_display.rs  mod.rs  raft_metrics.rs  wait.rs  wait_condition.rs
flexkv/src/network/: backoff.rs  factory.rs  mod.rs  network.rs  rpc_option.rs  snapshot_transport.rs
flexkv/src/progress/: mod.rs
flexkv/src/progress/entry/: mod.rs
flexkv/src/progress/inflight/: mod.rs
flexkv/src/proposer/: candidate.rs  leader.rs  leader_state.rs  mod.rs
flexkv/src/quorum/: coherent.rs  coherent_impl.rs  joint.rs  joint_impl.rs  mod.rs  quorum_set.rs  quorum_set_impl.rs
flexkv/src/raft/: core_state.rs  external_request.rs  impl_raft_blocking_write.rs  mod.rs  raft_inner.rs  runtime_config_handle.rs  trigger.rs
flexkv/src/raft/message/: append_entries.rs  client_write.rs  install_snapshot.rs  mod.rs  vote.rs
flexkv/src/raft/responder/: impls.rs  mod.rs
flexkv/src/raft_state/: accepted.rs  io_state.rs  log_state_reader.rs  mod.rs  vote_state_reader.rs
flexkv/src/raft_state/io_state/: log_io_id.rs
flexkv/src/raft_state/membership_state/: change_handler.rs  mod.rs
flexkv/src/replication/: callbacks.rs  hint.rs  mod.rs  replication_session_id.rs  request.rs  request_id.rs  response.rs
flexkv/src/runtime/: mod.rs
flexkv/src/storage/: adapter.rs  callback.rs  helper.rs  log_store_ext.rs  mod.rs  snapshot_signature.rs  v2.rs
flexkv/src/storage/v2/: raft_log_storage_ext.rs
flexkv/src/timer/: mod.rs  timeout.rs
flexkv/src/type_config/: util.rs
flexkv/src/vote/: vote.rs
flexkv/src/vote/leader_id/: leader_id_adv.rs  leader_id_std.rs  mod.rs
integration_test/: CMakeLists.txt  run.sh  servers.config
integration_test/availability/: availability.cpp  quorum_tests.cpp
integration_test/consistency/: consistency.cpp  multi_threaded.cpp  single_threaded.cpp
integration_test/failure/: failure.cpp
integration_test/include/: kv739_client.hpp
integration_test/perf/: performance.cpp
integration_test/workloads/: basic_test1.txt  hot_10_90.txt  hot_10_90_long.txt  read_benchmark.txt  read_benchmark_long.txt  uniform.txt  uniform_long.txt  write_benchmark.txt
integration_test/workloads_cp/: hot_10_90.txt  read_benchmark.txt  uniform.txt  write_benchmark.txt
