[package]
name = "flexkv"
edition = "2021"

[dependencies]
anyerror        = { workspace = true }
anyhow          = { workspace = true, optional = true }
byte-unit       = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
derive_more     = { workspace = true }
futures         = { workspace = true }
maplit          = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true, optional = true }
serde_json      = { workspace = true, optional = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-futures = { workspace = true }
validit         = { workspace = true }
flex_macros = { path = "./src/macros"}

[dev-dependencies]
anyhow             = { workspace = true }
async-entry        = { workspace = true }
pretty_assertions  = { workspace = true }
serde_json         = { workspace = true }

[features]
serde = ["dep:serde"]
default = [
    "serde"
]
