[package]
name = "flexkv-rocksdb"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "flexkv-rocks"
path = "src/bin/main.rs"

[dependencies]
flexkv = { path = "../../flexkv" }
tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tide = { version = "0.16" }
toy-rpc = { version = "0.10.0", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
anyhow = "1.0.63"
maplit = "1.0.2"
tempfile = "3.4.0"
rand = "0.8" 
once_cell = "1.17"  


[lib]
name = "flex_kv_store"
crate-type = ["lib", "cdylib"]  # Add cdylib for C++ FFI
path = "src/lib.rs"

[features]
default = ["ffi"]  # Enable FFI by default
ffi = []          # Define the FFI feature
